<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <ImageView
        android:id="@+id/combinedShapeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_combined_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/movies_list_title_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/combinedShapeIcon"
        app:layout_constraintLeft_toRightOf="@+id/combinedShapeIcon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_list_item"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:onClick="onMovieCardClick"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/combinedShapeIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_card_constraint_layout"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:background="@drawable/movie_card_bacground">

            <ImageView
                android:id="@+id/movie_card_background_picture"
                android:layout_width="166dp"
                android:layout_height="248dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/movie_card_picture" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/movie_card_mask"
                app:layout_constraintBottom_toBottomOf="@+id/movie_card_background_picture"
                app:layout_constraintTop_toTopOf="@+id/movie_card_background_picture" />

            <ImageView
                android:id="@+id/lice_icon_image_view"
                android:layout_width="16dp"
                android:layout_height="14dp"
                android:src="@drawable/like_icon"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/genere_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="214dp"
                android:text="@string/genere_string"
                android:textColor="@color/genere_text_color"
                android:textSize="8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star_1_image_view"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genere_text_view" />

            <ImageView
                android:id="@+id/star_2_image_view"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toEndOf="@+id/star_1_image_view"
                app:layout_constraintTop_toBottomOf="@+id/genere_text_view" />

            <ImageView
                android:id="@+id/star_3_image_view"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toEndOf="@+id/star_2_image_view"
                app:layout_constraintTop_toBottomOf="@+id/genere_text_view" />

            <ImageView
                android:id="@+id/star_4_image_view"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toEndOf="@+id/star_3_image_view"
                app:layout_constraintTop_toBottomOf="@+id/genere_text_view" />

            <ImageView
                android:id="@+id/star_5_image_view"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_gray_star"
                app:layout_constraintStart_toEndOf="@+id/star_4_image_view"
                app:layout_constraintTop_toBottomOf="@+id/genere_text_view" />

            <TextView
                android:id="@+id/reviews_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:text="@string/reviews_string"
                android:textColor="@color/gray_color"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/star_5_image_view"
                app:layout_constraintStart_toEndOf="@+id/star_5_image_view" />

            <androidx.cardview.widget.CardView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/age_frame_color">

                    <TextView
                        android:id="@+id/age_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="@string/age_rating_text"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/movie_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="256dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:lineSpacingExtra="0sp"
                android:maxLines="1"
                android:text="@string/muvie_name"
                android:textColor="@color/muvie_title_color"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/duration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/duration_string"
                android:textColor="@color/gray_color_2"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>